<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Lesson Manager</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="student_full_name">Student Full Name</string>
    <string name="student_birth_date">Student Birthday</string>
    <string name="student_full_address">Student Full Address</string>
    <string name="default_lesson_rate">Rate</string>
    <string name="contact_phone">Contact Phone</string>
    <string name="contact_email">Contact Email</string>
    <string name="parent_names">Parent Names</string>
    <string name="lesson_date">Date</string>
    <string name="lesson_start_time">Start Time</string>
    <string name="lesson_end_time">End Time</string>
    <string name="lesson_state">State</string>
    <string name="lesson_rate">Lesson Rate</string>
    <string name="payment_amount">Amount</string>
    <string name="payment_type">Type</string>
    <string name="payment_date">Date</string>
    <string name="notes">Notes</string>

    <string name="save_button">Save</string>
    <string name="cancel_button">Save</string>


    <string-array name="payment_types">
        <item>Cash</item>
        <item>Check</item>
        <item>Credit Card</item>
        <item>Other</item>
    </string-array>

</resources>
